--- a/vehiclesalesvis.html
+++ b/vehiclesalesvis.html
@@ -6,19 +6,19 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style> circle {fill: lightblue; stroke: black} </style>
     <style>
-      body {font-family: Montserrat; max-width: 1000px; margin: auto;}
+      body {padding: 20px; font-family: Montserrat; max-width: 1100px; margin: auto;}
 
     </style>
 
   </head>
   <body onload='init()' onresize='init()'>
-    <h1>How do fluctuations in gas prices affect manufacturer car production?</h1>
+    <h1>History of Auto Sales, Manufacturing, and Gas Prices</h1>
+    <h5>Analyzing the impact of gas prices on truck vs. car sales, production, and climate footprint</h5>
     <hr/>
     <div class="row">
-      <div class="col-5">
-        <h4>Scene <span class="sceneNum"></span></h4>
-        <h5>Auto <b>Sales</b> and Gas Prices <span class="sceneStartYear"></span> to <span class="sceneEndYear"></span>
-        </h5>
+      <div class="col-3">
+        <h2><span class="sceneStartYear"></span> to <span class="sceneEndYear"></span></h2>
+        <h5 id="subheading">Vehicle <b>Sales</b> and Gas Prices</h5>
         <nav aria-label="...">
           <ul class="pagination">
             <li id="s1" class="page-item"><a class="page-link" href="vehiclesalesvis.html?scene=1">1</a></li>
@@ -26,34 +26,37 @@
             <li id="s3" class="page-item"><a class="page-link" href="vehiclesalesvis.html?scene=3">3</a></li>
             <li id="s4" class="page-item"><a class="page-link" href="vehiclesalesvis.html?scene=4">4</a></li>
             <li id="s5" class="page-item"><a class="page-link" href="vehiclesalesvis.html?scene=5">5</a></li>
-            <li id="s6" class="page-item"><a class="page-link" href="vehicleprodvis.html">6</a></li>
-            <li id="s7" class="page-item"><a class="page-link" href="vehicleclimatevis.html">7</a></li>
+            <li id="s6" class="page-item"><a class="page-link" href="vehiclesalesvis.html?scene=6">6</a></li>
+            <li id="s7" class="page-item"><a class="page-link" href="vehiclesalesvis.html?scene=7">7</a></li>
           </ul>
         </nav>
+        <button id="prevBtn" type="button" class="btn btn-primary"><< Prev</button>
+        <button id="nextBtn" type="button" class="btn btn-primary">Next >></button>
         <hr/>
       </div>
-      <div id="sceneNotes" class="col-7"></div>
+      <div id="sceneNotes" class="col-9"></div>
     </div>
     <hr/>
-    <p><b>Filter by range of years: </b>Choose start year and end year between 1976 and 2018</p>
-    <form action="#" style="float:left">
+    <h5 class="text-primary">Explore here! </h5>
+    <p><b>Filter by range of years: </b>Choose start year and end year between 1976 and 2018 and hover over points!</p>
+    <div style="float:left">
       Start year: <input id="startyearinput" type="number" name="startYear" min="1976" max="2018"> |
       End year: <input id="endyearinput" type="number" name="endYear" min="1976" max="2018">
-      <input type="submit"> &nbsp | &nbsp
+      <input id="yearFilterSubmit" type="submit"> &nbsp | &nbsp
+    </div>
+    <div id="resetSlider" style="float:left">
+      <input label="RESET SLIDE" type="submit" value="Reset Slide">&nbsp&nbsp
+    </div>
+    <form href="vehiclesalesvis.html?scene=1">
+      <input label="Go Home" type="submit" value="Go Home">
     </form>
-    <form action="#">
-      <input label="Reset" type="submit" value="RESET">
-    </form>
-    <svg class="gaspriceyoy" height=400 width=950></svg>
-    <svg class="truckcarsales" height=400 width=950></svg>
-    <svg class="truckcarprod" height=400 width=950></svg>
-    <svg class="mpgyoy" height=400 width=950></svg>
-    <svg class="co2yoy" height=400 width=950></svg>
+    <svg class="chart1" height=350 width=1000></svg>
+    <svg class="chart2" height=350 width=1000></svg>
+    <svg class="chart3" height=350 width=950></svg>
 
 
     <script type="text/javascript" src="d3-scripts.js"></script>
     <script>
-
     async function init() {
       // Get the current startYear and endYear and scene
       var startYear = 1976;
@@ -63,21 +66,37 @@
       if (urlParams.has("scene")) {
         scene = parseInt(urlParams.get("scene"));
       }
+      if (!scene) { scene = 1};
+      d3.select("#resetSlider").on("click",function(e){var sceneUrl = "vehiclesalesvis.html?scene=" + scene; window.location.href =(sceneUrl); return;});
+      document.getElementById("yearFilterSubmit").onclick = function() {
+        var startYear = document.getElementById("startyearinput").value;
+        var endYear = document.getElementById("endyearinput").value;
+        var url = "vehiclesalesvis.html?startYear=" + startYear + "&endYear=" + endYear + "&scene=" + scene;
+        window.location.href = url;
+      }
+      if (scene == 1){
+        document.getElementById("prevBtn").disabled = true;
+      } else if (scene == 7) {
+        document.getElementById("nextBtn").disabled = true;
+      }
+      d3.select("#prevBtn").on("click",function(e){var sceneUrl = "vehiclesalesvis.html?scene=" + (scene-1); window.location.href =(sceneUrl); return;});
+      d3.select("#nextBtn").on("click",function(e){var sceneUrl = "vehiclesalesvis.html?scene=" + (scene+1); window.location.href =(sceneUrl); return;});
+
+
+
       if (scene == 1) {
-        const sceneNote = "<h5>Key Notes on the Data:</h5>"+
-          '<h6>Scene 1, the Overview</h6>'+
+        const sceneNote = '<h4>Slide 1: The Overview</h4>'+
           '<ul><li>Here, we present an overview of the history of oil prices and car sales. Go to the next slides for a history tour with more details!</li>' +
           '<li>Slides 1-5 take you on a tour of <b>retail car sales data, not all cars manufactured</b> for the US market</li>' +
-          '<li>To jump to oil prices effect on automakers <b>all cars manufactured</b> YoY, click <a href="/vehicleprodvis.html">here for slide 6</a> </li>' +
-          '<li>To jump to oil prices effect on automakers climate impact: <b>emissions/ MPG of all cars produced</b>, click <a href="/vehicleclimatevis.html">here for slide 7</a> </li>' +
+          // '<li>To jump to oil prices effect on automakers <b>all cars manufactured</b> YoY, click <a href="/vehicleprodvis.html">here for slide 6</a> </li>' +
+          // '<li>To jump to oil prices effect on automakers climate impact: <b>emissions/ MPG of all cars produced</b>, click <a href="/vehicleclimatevis.html">here for slide 7</a> </li>' +
           '<li>Big picture trend: <u>as gas prices decrease, truck sales increase</u></li>';
           d3.select("#sceneNotes").html(sceneNote);
           d3.select("#s1").classed("active", true);
       } else if (scene == 2) {
         startYear = 1976;
         endYear = 1981;
-        const sceneNote = "<h5>Key Notes on the Data:</h5>"+
-          '<h6>Scene 2, All Sales Plummet after Iranian Oil Crisis</h6>'+
+        const sceneNote = '<h4>Slide 2: The Iranian Oil Crisis</h4>'+
           '<ul><li>Throughout the mid 1970s to 1978, oil prices fell steadily as the US recovered from the 1973 Oil Crisis</li>' +
           '<li>As a result of falling prices, all vehicle sales increased (cars maintain ~75% market share; trucks 25%)</li>'+
           '<li>However in 1978, political turmoil in Iran, which controlled 7% of global market, shattered their oil production</li>' +
@@ -87,8 +106,7 @@
       } else if (scene == 3) {
         startYear = 1981;
         endYear = 2002;
-        const sceneNote = "<h5>Key Notes on the Data:</h5>"+
-          '<h6>Scene 3, Plenty of Oil: 2 Decades of Price Drops!</h6>'+
+        const sceneNote = '<h4>Slide 3: Two Decades of Oil Plenty</h4>'+
           '<ul><li>After the 1978 oil shock, US secures global sources of oil through OPEC and allies</li>' +
           '<li>As gas becomes cheaper, truck sales skyrocket 300% over these two decades! However, car sales flatline</li>'+
           '<li>By 2000, cars and trucks have roughly equal sales, despite cars dominating in 1980</li>' +
@@ -98,8 +116,7 @@
       } else if (scene == 4) {
         startYear = 2002;
         endYear = 2008;
-        const sceneNote = "<h5>Key Notes on the Data:</h5>"+
-          '<h6>Scene 4, Oil Tensions but the Economy Blooms </h6>'+
+        const sceneNote = '<h4>Slide 4: Oil Tensions but the Economy Blooms </h4>'+
           '<ul><li>After the 2000 dot com bust, US begins a steady recovery for 6 years</li>'+
           '<li>Consequently, after 9/11 and the Afghanistan War, US tensions grew with oil producing countries</li>'+
           '<li>Oil price skyrocket by 100%!</li>' +
@@ -109,19 +126,36 @@
       } else if (scene == 5) {
         startYear = 2008;
         endYear = 2018;
-        const sceneNote = "<h5>Key Notes on the Data:</h5>"+
-          '<h6>Scene 4, The Modern Era: Great Recession and Shale Boom!</h6>'+
+        const sceneNote = '<h4>Slide 5:  The Modern Era: Great Recession and Shale Boom!</h4>'+
           '<ul><li>Afer the 6 years of economic growth, 2008 was the great recession.</li>'+
           '<li>All vehicles sales plummeted by 21 percent.</li>'+
           '<li>The oil prices followed the economy too. During the recovery, cars and trucks shared 50/50 market split until 2014. </li>' +
           '<li>In 2014, US oil production skyrocketed as shale oil was discovered.</li>' +
-          '<li>Trucks sales boomed 36% since then. Car sales were shot by 30%.</li>';
+          '<li>Trucks sales boomed 36% since then. Car sales were shot by 30%.</li></ul>';
         d3.select("#sceneNotes").html(sceneNote);
         d3.select("#s5").classed("active", true);
+      } else if (scene == 6) {
+        const sceneNote = '<h4>Slide 6: Auto Manufacturing for the US Market</h4>'+
+          '<ul><li>This data, provided by regulation, shows all cars <b>manufactured</b> for the US market by model year, <b>not retail car sales</b> as in the previous slides</li>'+
+          '<li>While we saw truck sales overtake car sales, automakers still produce slightly more cars than trucks</li>' +
+          '<li>I theorize this discrepancy is due to legislation mandating car production</li></ul>';
+        d3.select("#sceneNotes").html(sceneNote);
+        d3.select('#subheading').html("Auto <b>Manufacturing</b> and Gas Prices")
+        d3.select("#s6").classed("active", true);
+      } else if (scene == 7) {
+        const sceneNote = '<h4>Slide 7: Auto Climate Performance: CO2 and Fuel Economy YOY</h4>'+
+          '<ul><li>Fuel economy tends to go up while emissions decrease year over year </li>'+
+          '<li>An insane insight: the average fuel economy of a <i>car manufactured for the US</i> between 1982 and 2004 <i>decreased</i> yearly</li>'+
+          '<li>It shows the necessity of public policy to drive climate innovation in the auto sector</li></ul>'
+        d3.select("#sceneNotes").html(sceneNote);
+        d3.select('#subheading').html("Auto <b>Climate</b> and Gas Prices");
+        d3.select("#s7").classed("active", true);
       }
       d3.select("span.sceneNum").html(scene);
       d3.select("span.sceneStartYear").html(startYear);
       d3.select("span.sceneEndYear").html(endYear);
+
+
 
 
       if (urlParams.has("startYear") && urlParams.has("endYear")) {
@@ -137,34 +171,22 @@
       d3.select("#startyearinput").attr("value", startYear);
       d3.select("#endyearinput").attr("value", endYear);
 
+      // clear SVGs
+      d3.select("svg.chart1").html("");
+      d3.select("svg.chart2").html("");
+      d3.selectAll("div.annotations").remove();
 
       if (scene >= 1 && scene <= 5) {
-        // clear SVGs
-        d3.select("svg.gaspriceyoy").html("");
-        d3.select("svg.truckcarsales").html("");
-        d3.selectAll("div.annotations").remove();
-
-        load_gaspriceyoy("svg.gaspriceyoy", 400, 950, startYear, endYear);
-        load_truckcarsales("svg.truckcarsales", 400, 950, startYear, endYear);
+        load_gaspriceyoy("svg.chart1", 350, 1000, startYear, endYear);
+        load_truckcarsales("svg.chart2", 350, 1000, startYear, endYear);
       } else if (scene == 6) {
-        // clear SVGs
-        d3.select("svg.gaspriceyoy").html("");
-        d3.select("svg.truckcarprod").html("");
-        d3.selectAll("div.annotations").remove();
 
-        load_gaspriceyoy("svg.gaspriceyoy", 400, 950, startYear, endYear);
-        load_truckcarprod("svg.truckcarprod", 400, 950, startYear, endYear);
+        load_gaspriceyoy("svg.chart1", 350, 1000, startYear, endYear);
+        load_truckcarprod("svg.chart2", 350, 1000, startYear, endYear);
       } else if (scene == 7) {
-        // clear SVGs
-        alert("ah");
-        d3.select("svg.gaspriceyoy").html("");
-        d3.select("svg.mpgyoy").html("");
-        d3.select("svg.co2yoy").html("");
-        d3.selectAll("div.annotations").remove();
-
-        load_gaspriceyoy("svg.gaspriceyoy", 400, 950, startYear, endYear);
-        load_mpg("svg.mpgyoy", 300, 950, startYear, endYear);
-        load_co2("svg.co2yoy", 300, 950, startYear, endYear);
+        load_gaspriceyoy("svg.chart1", 350, 1000, startYear, endYear);
+        load_mpg("svg.chart2", 350, 1000, startYear, endYear);
+        load_co2("svg.chart3", 350, 1000, startYear, endYear);
       }
     }
 
