--- a/vehiclesalesvis.html
+++ b/vehiclesalesvis.html
@@ -14,8 +14,8 @@
   </head>
   <body onload='init()' onresize='init()'>
     <div class="container">
-      <h1>History of Auto Sales, Manufacturing, and Gas Prices</h1>
-      <h5>The Great Rise of Trucks Since 1978 | <i>Cheap Gas + Market Boom = More Trucks</i></h5>
+      <h1>The Great Rise of Trucks Since 1978</h1>
+      <h5>A History of Auto Sales, Manufacturing, and Gas Prices | <i>Cheap Gas + Market Boom = More Trucks</i></h5>
       <hr/>
       <div class="row">
         <div class="col-3">
